WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186825
Blank viewer comes up and then auto-dismisses when device is not connected to Internet
https://bugs.webkit.org/show_bug.cgi?id=186825
Summary
Blank viewer comes up and then auto-dismisses when device is not connected to...
Dean Jackson
Reported
2018-06-19 16:08:31 PDT
Blank viewer comes up and then auto-dismisses when device is not connected to Internet
Attachments
Patch
(6.07 KB, patch)
2018-06-19 16:12 PDT
,
Dean Jackson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2018-06-19 16:12:57 PDT
Created
attachment 343119
[details]
Patch
Dean Jackson
Comment 2
2018-06-19 17:26:38 PDT
Committed
r232997
: <
https://trac.webkit.org/changeset/232997
>
Radar WebKit Bug Importer
Comment 3
2018-06-19 17:27:18 PDT
<
rdar://problem/41271291
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug