Blank viewer comes up and then auto-dismisses when device is not connected to Internet https://bugs.webkit.org/show_bug.cgi?id=186825 <rdar://problem/40294170>

Reviewed by Tim Horton.

Source/WebCore:

Export isSuccessful() to WebKit.

* platform/network/ResourceResponseBase.h:

Source/WebKit:

Handle the case where the network load fails, and send that
error onto QuickLook.

* UIProcess/Cocoa/DownloadClient.mm:
(WebKit::DownloadClient::didReceiveResponse): Check for success.
(WebKit::DownloadClient::processDidCrash): Cancel in the case of a crash.
(WebKit::DownloadClient::didFail): Propagate the error onto QuickLook.
* UIProcess/Cocoa/SystemPreviewControllerCocoa.mm:
(-[_WKPreviewControllerDataSource failWithError:]): New method that calls
the completion handler with the error data.
(WebKit::SystemPreviewController::fail): New API method.
* UIProcess/SystemPreviewController.h:

Canonical link: https://commits.webkit.org/202097@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232997 268f45cc-cd09-0410-ab3c-d52691b4dbfc